data/forge_javadoc/1.7.10/raw/net/minecraft/client/gui/GuiListExtended.md
---
title: "GuiListExtended"
description: "public abstract class GuiListExtended extends GuiSlot"
package: "net/minecraft/client/gui"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/gui/GuiListExtended.html"
sourceType: javadoc
---

# GuiListExtended

**Inheritance:** java.lang.Object → net.minecraft.client.gui.GuiSlot → net.minecraft.client.gui.GuiListExtended

## Class signature

```java
public abstract class GuiListExtended extends GuiSlot
```

## Methods

- `protected void drawBackground()`
- `protected void drawSlot(int p_148126_1_, int p_148126_2_, int p_148126_3_, int p_148126_4_, Tessellator p_148126_5_, int p_148126_6_, int p_148126_7_)`
- `protected void elementClicked(int p_148144_1_, boolean p_148144_2_, int p_148144_3_, int p_148144_4_)`
- `boolean func_148179_a(int p_148179_1_, int p_148179_2_, int p_148179_3_)`
- `boolean func_148181_b(int p_148181_1_, int p_148181_2_, int p_148181_3_)`
- `abstract GuiListExtended.IGuiListEntry getListEntry(int p_148180_1_)`
- `protected boolean isSelected(int p_148131_1_)`

## Fields

- `GuiListExtended`
