data/forge_javadoc/1.8.9/raw/net/minecraft/client/gui/GuiListExtended.md
---
title: "GuiListExtended"
description: "public abstract class GuiListExtended extends GuiSlot"
package: "net/minecraft/client/gui"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/gui/GuiListExtended.html"
sourceType: javadoc
---

# GuiListExtended

**Inheritance:** java.lang.Object → net.minecraft.client.gui.GuiSlot → net.minecraft.client.gui.GuiListExtended

## Class signature

```java
public abstract class GuiListExtended extends GuiSlot
```

## Methods

- `protected void drawBackground()`
- `protected void drawSlot(int entryID, int p_180791_2_, int p_180791_3_, int p_180791_4_, int mouseXIn, int mouseYIn)`
- `protected void elementClicked(int slotIndex, boolean isDoubleClick, int mouseX, int mouseY)` — The element in the slot that was clicked, boolean for whether it was double clicked or not
- `protected void func_178040_a(int p_178040_1_, int p_178040_2_, int p_178040_3_)`
- `abstract GuiListExtended.IGuiListEntry getListEntry(int index)` — Gets the IGuiListEntry object for the given index
- `protected boolean isSelected(int slotIndex)` — Returns true if the element passed in is currently selected
- `boolean mouseClicked(int mouseX, int mouseY, int mouseEvent)`
- `boolean mouseReleased(int p_148181_1_, int p_148181_2_, int p_148181_3_)`

## Fields

- `GuiListExtended`
